MDEV-31746 Problems with tx_isolation after MDEV-21921

With session tracking on the tx_isolation of importance to
connector frameworks, its important that tracking of tx_isolation
does get informed if a user `set session transaction_isolation=X`
as the alias for tx_isolation.

Rather than just implement this for one variable alias, it
is implemented for all aliases.

To assist with this the key hash of session_tracker is now made up of
the offset, and also a bitmask in the Sys_var_bit class.

As these values and their hashs are not unique, the session tracker
defination removes its uniqueness on the key. This is to preserve
compatibility as previously it was possible to track a variable
and its alias so this behaviour is preserved.

Rather than previously where the key of the hash was unique,
we still need to enforce the uniqueness of the value (m_svar) in the lookup.
This is to preserve the behaviour monitoring a duplicate variable
silently ignores duplicates. This is implemented in the
Session_sysvars_tracker::vars_list::insert.

The impacts of aliases are:
- If track one variable, its alias changes, you get a tracking
  change on the variable you are monitoring.
- If you track two aliased variables of each other, changing
  one variable with have two tracking events.
- If you are tracking *, you will get a change on the variable
  changed. If then you change its alias, you'll get two tracking
  events for both variable changes.

Other:
* Eliminate session tracking in bootstrap.